[package]
name = "hpkgbouncer"
version = "0.3.2"
authors = ["Alexander von Gluck IV <kallisti5@unixzen.com>"]

[dependencies]
natord = "1.0.9"
rocket = "0.4"
rocket_prometheus = "0.9.0"
regex = "*"
rust-s3 = { version = "0.32", features = ["default", "blocking"] }
serde = "*"
toml = "0.5"
url = "*"
