[package]
name = "hpkgbouncer"
version = "0.4.1"
authors = ["Alexander von Gluck IV <kallisti5@unixzen.com>"]
edition = "2021"

[dependencies]
natord = "1.0"
rocket = "0.5"
rocket_prometheus = "0.10"
regex = "*"
rust-s3 = { version = "0.35", features = ["default", "blocking"] }
serde = "*"
toml = "0.5"
url = "*"
